# notion-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md
.omc/: handoff-v0.3.md  handoff-v0.4.md  project-memory.json
.omc/sessions/: 800817aa-1106-43c8-84d2-39bb9c62cb63.json  ebef34c5-f9e2-4817-89e1-90e589d51a1f.json
.omc/state/: agent-replay-ebef34c5-f9e2-4817-89e1-90e589d51a1f.jsonl  last-tool-error.json  mission-state.json  pane-tail-positions.json  subagent-tracking.json
.omc/state/checkpoints/: checkpoint-2026-04-22T09-46-51-198Z.json
clawhub/: SKILL.md
docs/cookbook/: agent-idempotent-writes.md  bootstrap-workspace.md  bulk-import-csv.md  reconcile-schema.md
docs/cookbook/snippets/: db_create.md  db_update.md  ds_add_relation.md  ds_update.md  page_move.md  users_me.md
docs/runtime-samples/: claude-desktop.sample.json  cursor-mcp.sample.json  hermes-profile.sample.yaml
examples/: print_schema.rs  smoke.rs
scripts/: live-mcp-test.sh
src/: config.rs  error.rs  lib.rs  main.rs  output.rs
src/api/: block.rs  client.rs  comment.rs  data_source.rs  database.rs  error.rs  mod.rs  page.rs  pagination.rs  search.rs  user.rs  version.rs
src/cache/: lru.rs  mod.rs
src/cli/: block.rs  comment.rs  db.rs  ds.rs  error.rs  json_body.rs  mcp.rs  mod.rs  page.rs  schema.rs  search.rs  user.rs
src/mcp/: audit.rs  common.rs  handlers.rs  mod.rs  params.rs  server.rs  server_admin.rs  server_ro.rs  server_write.rs
src/observability/: cost.rs  mod.rs  otel.rs  request_id.rs  tracing_setup.rs
src/token_provider/: mod.rs
src/token_provider/providers/: env.rs  exec.rs  file.rs  keychain.rs  mod.rs
src/types/: block.rs  comment.rs  common.rs  data_source.rs  database.rs  filter.rs  icon.rs  mod.rs  page.rs  property.rs  property_schema.rs  rich_text.rs  sort.rs  user.rs
src/validation/: ids.rs  mod.rs
tests/: api_mock.rs  audit_log.rs  block_api.rs  block_roundtrip.rs  cache.rs  cli.rs  error_hints.rs  exit_codes.rs  id_validation.rs  idempotency.rs  json_body.rs  mcp_handlers.rs  mcp_server.rs  observability.rs  page_fixture.rs  property_roundtrip.rs  property_schema_roundtrip.rs  schema_shape.rs  stream_jsonl.rs  token_provider.rs
