[package]
name = "notion-cli"
version = "0.0.1"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "Agent-First Notion CLI and MCP server"
readme = "README.md"
keywords = ["notion", "cli", "mcp", "agent"]
categories = ["command-line-utilities", "api-bindings"]

[lib]
name = "notion_cli"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2"
thiserror = "2"
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
governor = "0.10"
futures-util = { version = "0.3", default-features = false, features = ["std"] }

[dev-dependencies]
proptest = "1"
wiremock = "0.6"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
