[package]
name = "notion-cli-mcp"
version = "0.3.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "Agent-first Notion CLI and MCP server for the API 2025-09-03+ data-source model"
readme = "README.md"
repository = "https://github.com/0xarkstar/notion-cli"
homepage = "https://github.com/0xarkstar/notion-cli"
documentation = "https://docs.rs/notion-cli"
keywords = ["notion", "cli", "mcp", "agent", "api"]
categories = ["command-line-utilities", "api-bindings"]
exclude = [
    ".omc/**",
    "scripts/**",
    "examples/**",
    "tests/**",
]

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

[lib]
name = "notion_cli"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2"
thiserror = "2"
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
governor = "0.10"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
clap = { version = "4.6", features = ["derive", "env", "wrap_help"] }
rmcp = { version = "1.4", features = ["server", "macros", "transport-io", "schemars"] }
anyhow = "1"

[[bin]]
name = "notion-cli"
path = "src/main.rs"

[dev-dependencies]
proptest = "1"
wiremock = "0.6"
assert_cmd = "2"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
